--- a/20250919.ipynb
+++ b/20250919.ipynb
@@ -2168,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d7282dbb",
    "metadata": {},
    "outputs": [
@@ -2195,6 +2195,7 @@
    "source": [
     "#과제 트리 만들기 리마인드\n",
     "#반복문 활용\n",
+    "#이중 for문이기 떄문에 들여쓰기가 정말 중요함.\n",
     "\n",
     "n = 13\n",
     "\n",
@@ -2208,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9aeb3dcc",
    "metadata": {},
    "outputs": [
@@ -2216,29 +2217,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         **\n",
+      "         *\n",
       "        ***\n",
-      "       ****\n",
-      "      *****\n",
-      "     ******\n",
-      "    *******\n",
-      "   ********\n",
-      "  *********\n",
-      " **********\n",
-      "***********\n"
+      "       *****\n",
+      "      *******\n",
+      "     *********\n",
+      "    ***********\n",
+      "   *************\n",
+      "  ***************\n",
+      " *****************\n",
+      "*******************\n"
      ]
     }
    ],
    "source": [
     "#과제 트리 만들기 리마인드\n",
-    "#반복문 활용\n",
+    "#반복문 사용 안 할 경우\n",
     "\n",
     "n = 10\n",
-    "\n",
     "for i in range(1, n + 1): #i가 별의 갯수에 영향을 줌.\n",
     "    spaces = \" \" * (n-i)\n",
-    "    stars = \"*\" * (2 + i - 1)\n",
+    "    stars = \"*\" * (2 * i - 1) #더하기는 반절만 나오. 곱하기임 \n",
     "    print(spaces + stars)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "bb6db4bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         *\n",
+      "        ***\n",
+      "       *****\n",
+      "      *******\n",
+      "     *********\n",
+      "    *****\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 사용자로 부터 n개의 별의 갯수를 입력받은 뒤\n",
+    "#별을 출력하되 별의 갯수만큼만 출력하다가 별이 다 소진되면 멈추는 코드작성\n",
+    "# 트리의 최대 높이는 10층\n",
+    "# 별(n)은 30개로 제한\n",
+    "\n",
+    "n = int(input(\"숫자를 적어주세요 : \"))\n",
+    "n = min(n, 30)  \n",
+    "count = 0 \n",
+    "\n",
+    "for i in range(1, 11):  # 트리 최대 높이 10층\n",
+    "    if count >= n:\n",
+    "        break\n",
+    "\n",
+    "    print(\" \" * (10 - i), end=\"\")\n",
+    "    \n",
+    "    for j in range(2 * i - 1):\n",
+    "        if count >= n:\n",
+    "            break\n",
+    "        print(\"*\", end=\"\")\n",
+    "        count += 1\n",
+    "    print()  # 줄 바꿈\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f33306c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "******\n",
+      "*******\n",
+      "**\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 반쪽짜리 트리 만들기(위와 동일 조건)\n",
+    "\n",
+    "n = 30 # 별 30개 고정\n",
+    "\n",
+    "star = 0\n",
+    "break_all = False\n",
+    "for i in range(1, 10 + 1): # 최대 별의 높이는 10층으로 고정\n",
+    "    for j in range(i): # j는 해당 층에서 별을 몇 개 찍을지 결정\n",
+    "        star += 1\n",
+    "        if star > n:\n",
+    "            beak_all = True\n",
+    "            break\n",
+    "        print(\"*\", end=\"\")\n",
+    "    if break_all:\n",
+    "        break\n",
+    "    print()"
    ]
   }
  ],
