--- a/20250922.ipynb
+++ b/20250922.ipynb
@@ -2139,6 +2139,284 @@
    "source": [
     "a.difference(b) #차집합     "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24f761b4",
+   "metadata": {},
+   "source": [
+    "### 튜플\n",
+    "리스트의 성질을 다 갖고 있은나 초기화 후 편집이 불가함.\n",
+    "전체 삭제는 가능하나 일부 삭제는 불가능함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "5a4029f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "38a145ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = (1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "7e270c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "e9df1d5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "25d2aa2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[217]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mt2\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m = \u001b[32m10\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#튜플은 초기화 후 편집이 불가함.\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t2[0] = 10\n",
+    "#튜플은 초기화 후 편집이 불가함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e44be0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t3 =('a', 4, ('ab', 'g'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06536ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rawdata = ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dce8de78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t4 = 1,2,3,4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b467aa1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(t4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e371f08e",
+   "metadata": {},
+   "source": [
+    "빼빼로데이 \n",
+    "빼빼로의 종류는 6가지 맛('누드초코', '아몬드', '초코', '크런키', '크림치즈', '화이트쿠키')이 있었습니다.\n",
+    "이벤트 빼빼로는 한가지 맛에 하나만 구매할 수 있습니다.\n",
+    "구매한 빼빼로를 오름차순으로 정렬하여 결과를 나타내 주세요.\n",
+    "\n",
+    "입력1\n",
+    "[\"초코\", \"누드초코\", \"크런키\", \"아몬드\", \"초코\", \"누드초코\", \"아몬드\", \"화이트쿠키\", \"초코\", \"초코\"]\n",
+    "\n",
+    "출력1\n",
+    "['누드초코', '아몬드', '초코', '크런키', '화이트쿠키']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "ca805989",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['누드초코', '아몬드', '초코', '크런키', '화이트쿠키']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pepero = [\"초코\", \"누드초코\", \"크런키\", \"아몬드\", \"초코\", \"누드초코\", \"아몬드\", \"화이트쿠키\", \"초코\", \"초코\"]\n",
+    "# 빼빼로 변수 지정\n",
+    "result = sorted(set(pepero))\n",
+    "# 결과 변수 = 오름차순(중복값 불가(빼빼로 변수))\n",
+    "print(result)\n",
+    "# 출력 (결과 변수)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4fae27e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['누드초코', '아몬드', '초코', '크런키', '화이트쿠키']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pepero = [\"초코\", \"누드초코\", \"크런키\", \"아몬드\", \"초코\", \"누드초코\", \"아몬드\", \"화이트쿠키\", \"초코\", \"초코\"]\n",
+    "\n",
+    "answer = list(set(pepero))\n",
+    "answer.sort()\n",
+    "print(answer)\n",
+    "\n",
+    "#다른 풀이"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc3d7842",
+   "metadata": {},
+   "source": [
+    "영단어갯수세기\n",
+    "\n",
+    "내가 외운 단어의 개수는 몇개일까요?\n",
+    "\n",
+    "입력1\n",
+    "\"culture experience symbol symbol education symbol effect education affair liberty liberty affair\"\n",
+    "\n",
+    "출력1\n",
+    "7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "749c1b33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = \"culture experience symbol symbol education symbol effect education affair liberty liberty affair\"\n",
+    "\n",
+    "unique_words = set(words.split())\n",
+    "\n",
+    "result = len(unique_words)\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "9d9fd779",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = \"culture experience symbol symbol education symbol effect education affair liberty liberty affair\"\n",
+    "\n",
+    "len(set(words.split())) #내부적으로 list로 바뀌는 것을 확인\n",
+    "\n",
+    "\n",
+    "# 7"
+   ]
   }
  ],
  "metadata": {
