--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "d5fed585",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "id": "75dcbd8f",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "id": "7170f456",
    "metadata": {},
    "outputs": [
@@ -74,19 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "2a0b903a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m     a = a + \u001b[32m1\u001b[39m\n\u001b[32m      5\u001b[39m vartest(\u001b[32m3\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'a' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
      ]
     }
    ],
@@ -102,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "2769f07c",
    "metadata": {},
    "outputs": [
@@ -131,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "22afecd4",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "name 'a' is parameter and global (3706790022.py, line 6)",
+     "evalue": "name 'a' is parameter and global (488234992.py, line 6)",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mglobal a\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m name 'a' is parameter and global\n"
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[75]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mglobal a\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m name 'a' is parameter and global\n"
      ]
     }
    ],
@@ -162,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2ca9184b",
    "metadata": {},
    "outputs": [],
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3759c728",
    "metadata": {},
    "outputs": [],
@@ -229,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d8b267be",
    "metadata": {},
    "outputs": [
@@ -261,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "15bfb90e",
    "metadata": {},
    "outputs": [
@@ -285,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "a3a030e7",
    "metadata": {},
    "outputs": [
@@ -329,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "cd23cdce",
    "metadata": {},
    "outputs": [],
@@ -339,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "3becbea8",
    "metadata": {},
    "outputs": [
@@ -361,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cdf816bd",
    "metadata": {},
    "outputs": [
@@ -394,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "74372942",
    "metadata": {},
    "outputs": [],
@@ -405,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2f656d20",
    "metadata": {},
    "outputs": [
@@ -427,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "84642068",
    "metadata": {},
    "outputs": [
@@ -454,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3ca96c66",
    "metadata": {},
    "outputs": [
@@ -481,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "be948842",
    "metadata": {},
    "outputs": [
@@ -505,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "764d4ee3",
    "metadata": {},
    "outputs": [
@@ -545,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "8ac1601b",
    "metadata": {},
    "outputs": [],
@@ -555,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c0c5f655",
    "metadata": {},
    "outputs": [
@@ -576,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "11abcf27",
    "metadata": {},
    "outputs": [],
@@ -587,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "43ceab2b",
    "metadata": {},
    "outputs": [
@@ -608,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "23dd07f8",
    "metadata": {},
    "outputs": [
@@ -651,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "3f6ac60c",
    "metadata": {},
    "outputs": [
@@ -674,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "4b30716f",
    "metadata": {},
    "outputs": [
@@ -697,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "85614e9a",
    "metadata": {},
    "outputs": [
@@ -722,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "7b1520a5",
    "metadata": {},
    "outputs": [
@@ -753,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "259df35f",
    "metadata": {},
    "outputs": [],
@@ -763,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "8996c343",
    "metadata": {},
    "outputs": [
@@ -784,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "f6a39bc6",
    "metadata": {},
    "outputs": [
@@ -805,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e992dc29",
    "metadata": {},
    "outputs": [
@@ -827,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "36ccb41d",
    "metadata": {},
    "outputs": [
@@ -849,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "cfef5928",
    "metadata": {},
    "outputs": [],
@@ -892,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "99a0ec6d",
    "metadata": {},
    "outputs": [
@@ -914,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "388f0891",
    "metadata": {},
    "outputs": [
@@ -942,12 +938,47 @@
    "outputs": [],
    "source": [
     "#소수 판별 함수 is_prime()\n",
-    "[2,3,4,5,6,7,8,9] # [True, True, False, True, False, True, False, False]\n",
-    "\n",
-    "def is_prime(num):\n",
-    "    if num < 2:\n",
-    "        return False\n",
-    "    for i in range(2, )\n"
+    "[2,3,4,5,6,7,8,9] # [True, True, False, True, False, True, False, False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "6a402e97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_prime(num_lsit):\n",
+    "    result = []\n",
+    "    for num in num_lsit:\n",
+    "        isprime = True\n",
+    "        for i in range(2, num):\n",
+    "            if num % i == 0:\n",
+    "                isprime = False\n",
+    "                break\n",
+    "        result.append(isprime)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4b309b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, True, False, True, False, True, False, False]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_prime([2,3,4,5,6,7,8,9])"
    ]
   }
  ],
