--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -980,6 +980,60 @@
    "source": [
     "is_prime([2,3,4,5,6,7,8,9])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bb1e394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#모듈이란?\n",
+    "\n",
+    " - 파이썬 코드로 이루어진 파일\n",
+    " - 함수나 변수, 클래스 등의 코드가 들어있음\n",
+    " - 직접 만들거나(사용자 정의 모듈)\n",
+    " - 다른 사람이 만들어 놓은 모듈을 가져와 사용\n",
+    "\n",
+    " - 사용법 import 모둘명 #모듈 전체를 가져옴, 뒷부분에 as ...를 넣어 긴 모듈명을 줄일 수 있음.\n",
+    " - from 모듈명 import 함수1, 함수2, ... #모듈 내 특정 함수만 가지고 오는 방법\n",
+    "\n",
+    "#패지키란?\n",
+    "- 관련 있는 모듈의 집합\n",
+    "- 모듈을 담는 디렉토리\n",
+    "- 파이썬 모듈을 계층적인 디렉토리 구조로 관리할 수 있게 함\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "3d1d18c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "04cfc90f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.randint(1, 100)"
+   ]
   }
  ],
  "metadata": {
