--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -1016,17 +1016,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "id": "04cfc90f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "96"
+       "24"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,6 +1034,138 @@
    "source": [
     "random.randint(1, 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "0e46c29b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random as r #축약어\n",
+    "r.randint(1, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "91d81220",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random \n",
+    "\n",
+    "randint(1, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "034eddb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "randint(1, 100)\n",
+    "random.randrange(1, 3)\n",
+    "# randrange(1, 3) NameError 발생"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c9d147f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 권장하지 않음\n",
+    "\n",
+    "from random import *\n",
+    "from math import *\n",
+    "# from numpy import *\n",
+    "\n",
+    "randint(1, 100)\n",
+    "randrange(1, 3)\n",
+    "sample([1,2,3], 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "049e9f37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모듈 가져오기 예제\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "num1 = math.pow(2, 3)\n",
+    "num2 = math.sqrt(9)\n",
+    "\n",
+    "print(num1 + num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd34409c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
