--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -1082,17 +1082,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "034eddb3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "86"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1101,6 @@
     "from random import randint\n",
     "\n",
     "randint(1, 100)\n",
-    "random.randrange(1, 3)\n",
     "# randrange(1, 3) NameError 발생"
    ]
   },
@@ -1161,11 +1160,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd34409c",
+   "execution_count": 35,
+   "id": "4d8c5def",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 19, 21, 33, 34, 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 행운번호 추첨기 (무작위 생성된 6개의 숫자 출력)\n",
+    "\n",
+    "import random as r\n",
+    "\n",
+    "\n",
+    "result = []\n",
+    "while len(result) < 6:\n",
+    "    num = r.randint(1, 45)\n",
+    "    if num not in result:\n",
+    "        result.append(num)\n",
+    "\n",
+    "print(sorted(result)) # 작은 숫자부터 sorted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aaa67c6",
+   "metadata": {},
+   "source": [
+    "## 사용자정의모듈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d124548c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mymodule as mm\n",
+    "\n",
+    "print(mm.my_add(7, 3))\n",
+    "print(mm.my_sub(3, 5))"
+   ]
   }
  ],
  "metadata": {
