--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -1205,6 +1205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "mymodule안에서의 __name__: mymodule\n",
       "10\n",
       "-2\n"
      ]
@@ -1216,6 +1217,226 @@
     "print(mm.my_add(7, 3))\n",
     "print(mm.my_sub(3, 5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab54db8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'__main__'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__name__ 변수\n",
+    "\n",
+    "파이썬이 내부적으로 사용하는 특별한 변수 이름"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "257c0fd8",
+   "metadata": {},
+   "source": [
+    "## 클래스"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f799d13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "객체지향의 기본적인 개념\n",
+    "객체를 표현하기 위한 문법\n",
+    "    객체: 체크박스, 스크롤바, 터틀객체 등 특정한 모양이나 개념이 존재하는 것.\n",
+    "현실세계 사물의 속성과 동작들을 코드로 구현하는 것\n",
+    "관련된 속성과 동작을 하나의 범주로 묶음\n",
+    "사물의 속성은 변수로, 동작은 함수(메소드)로 표현\n",
+    "    - 속성은 매개변수를 받아 사용하기 위한 값을 정함\n",
+    "    - 메소드는 만들어진 속성을 이용해 그에 따른 동작을 실행\n",
+    "멤버: 클래스를 구성하는 변수와 함수\n",
+    "메소드: 클래스에 속한 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "be2868ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 클래스 뒤는 대문자로 작성하는 암묵적인(?) 규칙이 있다.\n",
+    "# 사용자 지정 함수 def __init__는 약속이다.\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name    \n",
+    "        self.age = age\n",
+    "\n",
+    "    def walk(self):\n",
+    "        print(f'{self.name}이 걸어가요')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82c38bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class 이름을 통해서\n",
+    "\n",
+    "person1 = Person(\"박지민\", 31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "12447baf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Person'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(person1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c1e834b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "박지민이 걸어가요\n"
+     ]
+    }
+   ],
+   "source": [
+    "person1.walk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6d84b2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person2 = Person(\"전정국\", 29)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "99ac431e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전정국이 걸어가요\n"
+     ]
+    }
+   ],
+   "source": [
+    "person2.walk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "07c88995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NewPerson(Person):\n",
+    "    def fly(self):\n",
+    "        print(f'{self.name}이 날아가요')\n",
+    "    def walk(self):\n",
+    "        print(f'{self.name}이 너무 잘 걸어가요')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3f52f76c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person3 = NewPerson(\"정호석\", 33)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7cd26430",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정호석이 걸어가요\n"
+     ]
+    }
+   ],
+   "source": [
+    "person3.walk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01504582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "클래스 - 메서드 오버라이딩\n",
+    "\n",
+    "- 메서드 오버라이딩\n",
+    "부모 클래스에 있는 메서드를 동일한 이름으로 다시 만드는 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca3dbdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "클래스 변수\n",
+    "- 클래스 안에 변수를 성언하여 생성\n",
+    "- 클래스_이름.클래스 변수로 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1c41ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
